add burger menu icon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
   <body>
     <header>
       <div class="header-container">
         <h1>Logo</h1>
+        <div class="burger">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <nav class="nav">
           <ul>
             <li>Accueil</li>
